se trabajo con scss agregando variables a lo ya trabajado en css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Agencia de Marketing MM</title>
+  <meta name="descripcion" content="Construi con nosotros la mejor version de tu marca">
+  <meta name="autor" content="Urti Facundo">
+  <meta name="keywords" content="Marketing, Agencia de Marketing, Publicidad">
+  <meta name="copyright" content="Agencia MM 2023">
   <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -13,10 +17,10 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg botonera>
+  <nav class="navbar navbar-expand-lg botonera">
         <div class=" container-fluid">
     <a class="navbar-brand" href="../index.html">
-      <img src="../img/mmlogo1.png" alt="logo agencia de marketing mm">
+      <img src="img/mmlogo1.png" alt="logo agencia de marketing mm">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
