--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg botonera>
+    <nav class="navbar navbar-expand-lg botonera">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">
             <img src="../img/mmlogo1.png" alt="logo agencia de marketing mm">
@@ -44,21 +44,22 @@
     </header>
     <main>
         <section>
-            <h1>Contacto</h1>
+          <div> <class="formulario">
             <form action="envio php">
+              <h1>Contacto</h1>
                 <label for="Nombre">Nombre</label>
                 <input type="text" id="Nombre" placeholder="Nombre y Apellido">
                 <label for="Email">Email</label>
                 <input type="text" id=Email placeholder="Email">
-                <div>
                     <label for="Consulta">Consulta</label>
                     <input type="text" id=Consulta placeholder="Escribe aqui">
-                </div>
                 <div>
-                    <input type="reset" value="Cancelar">
-                    <input type="submit" value="Enviar">
-                </div>
+                  <input type="submit" value="Enviar">
+                  <input type="reset" value="Cancelar">
+                  </div>
             </form>
+          
+          </div>
         </section>
     </main>
     <footer>
