--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg botonera>
+    <nav class="navbar navbar-expand-lg botonera">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">
             <img src="../img/mmlogo1.png" alt="logo agencia de marketing mm">
