--- a/pages/Boxes.html
+++ b/pages/Boxes.html
@@ -12,7 +12,7 @@
 
 <body>
   <!---->
-  <nav class="navbar navbar-expand-lg botonera>
+  <nav class="navbar navbar-expand-lg botonera">
     <div class="container-fluid">
       <a class="navbar-brand" href="../index.html">
         <img src="../img/mmlogo1.png" alt="logo agencia de marketing mm">
