--- a/index.html
+++ b/index.html
@@ -13,35 +13,35 @@
   <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg botonera">
-        <div class=" container-fluid">
-    <a class="navbar-brand" href="../index.html">
-      <img src="img/mmlogo1.png" alt="logo agencia de marketing mm">
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" href="pages/Nosotros.html">Nosotros</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="pages/Servicios.html">Servicios</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="pages/Boxes.html">Boxes</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="pages/Contacto.html">Contacto</a>
-        </li>
-      </ul>
-    </div>
+    <div class=" container-fluid">
+      <a class="navbar-brand" href="../index.html">
+        <img src="img/mmlogo1.png" alt="logo agencia de marketing mm">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="pages/Nosotros.html">Nosotros</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="pages/Servicios.html">Servicios</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="pages/Boxes.html">Boxes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="pages/Contacto.html">Contacto</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </nav>
   <header>
@@ -62,7 +62,6 @@
                 <h2 class="card-title">Brinda experiencias unicas</h2>
                 <p class="card-text">Haz que tu cliente sea tu gran aliado. Te acompañaremos en el proceso de alcanzar
                   tu posicionamiento deseado y trabajaremos para que tus clientes siempre quieran volver.</p>
-                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
               </div>
             </div>
           </div>
@@ -82,7 +81,6 @@
                 <p class="card-text">Logra una performance adecuada a tus metas esperadas. Te asistiremos en la
                   creacion, planificacion, desarrollo y ejecucion de estrategias que permitan alcanzar de manera optima
                   tus propios objetivos.</p>
-                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
               </div>
             </div>
           </div>
@@ -102,7 +100,6 @@
                 <p class="card-text">Conoce en profundidad tu marca, tus propositos y objetivos. te guiaremos de forma
                   personalizada con las herramientas necesarias para hacer crecer tu negocio dentro del mercado y
                   llevarlo al maximo nivel.</p>
-                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
               </div>
             </div>
           </div>
@@ -111,13 +108,21 @@
     </div>
   </div>
 
-  <footer>
-    <a href="https://instagram.com" target="_blank">
-      <img src="img/iconos/instagram.png" alt="seguinos en instagram">
-    </a>
-    <a href="https://facebook.com" target="blank">
-      <img src="img/iconos/facebook.jpg" alt="seguinos en facebook">
-    </a>
+  <footer class="pie-pagina">
+    <div class="red-social">
+      <h2>Siguenos</h2>
+      <div class="logo-rrss">
+      <a href="https://instagram.com" target="_blank">
+        <img src="img/iconos/instagram.png" alt="seguinos en instagram">
+      </a>
+      <a href="https://facebook.com" target="blank">
+        <img src="img/iconos/facebook.png" alt="seguinos en facebook">
+      </a>
+    </div>
+    </div>
+    <div class="derechos">
+      <small>&copy; 2022 <b>Agencia MM</b> - Todos los Derechos Reservados</small>
+    </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
