--- a/pages/Boxes.html
+++ b/pages/Boxes.html
@@ -5,19 +5,23 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>boxes</title>
+  <meta name="descripcion" content="Tu Box ideal">
+  <meta name="autor" content="Urti Facundo">
+  <meta name="keywords" content="Marketing, Agencia de Marketing, Publicidad">
+  <meta name="copyright" content="Agencia MM 2023">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/main.css">
 </head>
 
 <body>
-  <!---->
   <nav class="navbar navbar-expand-lg botonera">
     <div class="container-fluid">
       <a class="navbar-brand" href="../index.html">
         <img src="../img/mmlogo1.png" alt="logo agencia de marketing mm">
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -45,20 +49,50 @@
   <main>
     <section>
       <h1>Boxes</h1>
-      <h2>Branding & Web Development</h2>
-      <p>Combinamos el servicio completo de Branding y Web Development con un descuento especial</p>
-      <h2>Social Media & Publicidad</h2>
-      <p>Incorporamos el servicio de Social Media al de Publicidad con un descuento especial</p>
-
+      <div class="row">
+        <div class="col-sm-6 mb-3 mb-sm-0">
+          <div class="card">
+            <div class="card-boxes">
+              <h2 class="card-title">Branding & Web Development</h2>
+              <p class="card-text">Combinamos el servicio completo de Branding y Web Development con un descuento
+                especial</p>
+                <main class="text-end">
+              <a href="Contacto.html" class="btn btn-secondary">Contratalo</a>
+              </main>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-boxes">
+              <h2 class="card-title">Social Media & Publicidad</h2>
+              <p class="card-text">Incorporamos el servicio de Social Media al de Publicidad con un descuento especial
+              </p>
+              <main class="text-end">
+              <a href="Contacto.html" class="btn btn-secondary">Contratalo</a>
+            </main>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
-  <footer>
-    <a href="https://instagram.com" target="_blank">
-      <img src="../img/iconos/instagram.png" alt="seguinos en instagram">
-    </a>
-    <a href="https://facebook.com" target="blank">
-      <img src="../img/iconos/facebook.jpg" alt="seguinos en facebook">
-    </a>
+
+  <footer class="pie-pagina">
+    <div class="red-social">
+      <h2>Siguenos</h2>
+      <div class="logo-rrss">
+        <a href="https://instagram.com" target="_blank">
+          <img src="../img/iconos/instagram.png" alt="seguinos en instagram">
+        </a>
+        <a href="https://facebook.com" target="blank">
+          <img src="../img/iconos/facebook.png" alt="seguinos en facebook">
+        </a>
+      </div>
+    </div>
+    <div class="derechos">
+      <small>&copy; 2022 <b>Agencia MM</b> - Todos los Derechos Reservados</small>
+    </div>
   </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
