--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -6,10 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agencia de Marketing MM Contacto</title>
+    <meta name="descripcion" content="Habla con nosotros">
+    <meta name="autor" content="Urti Facundo">
+    <meta name="keywords" content="Marketing, Agencia de Marketing, Publicidad">
+    <meta name="copyright" content="Agencia MM 2023">
     <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 
 <body>
@@ -44,7 +48,7 @@
     </header>
     <main>
         <section>
-          <div> <class="formulario">
+          <div class="formulario">
             <form action="envio php">
               <h1>Contacto</h1>
                 <label for="Nombre">Nombre</label>
@@ -62,13 +66,21 @@
           </div>
         </section>
     </main>
-    <footer>
+    <footer class="pie-pagina">
+      <div class="red-social">
+        <h2>Siguenos</h2>
+        <div class="logo-rrss">
         <a href="https://instagram.com" target="_blank">
-            <img src="../img/iconos/instagram.png" alt="seguinos en instagram">
+          <img src="../img/iconos/instagram.png" alt="seguinos en instagram">
         </a>
         <a href="https://facebook.com" target="blank">
-            <img src="../img/iconos/facebook.jpg" alt="seguinos en facebook">
+          <img src="../img/iconos/facebook.png" alt="seguinos en facebook">
         </a>
+      </div>
+      </div>
+      <div class="derechos">
+        <small>&copy; 2022 <b>Agencia MM</b> - Todos los Derechos Reservados</small>
+      </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
