--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -2,66 +2,102 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agencia de Marketing MM Nosotros</title>
-    <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Agencia de Marketing MM Nosotros</title>
+  <meta name="descripcion" content="Descubri mas sobre Agencia MM">
+  <meta name="autor" content="Urti Facundo">
+  <meta name="keywords" content="Marketing, Agencia de Marketing, Publicidad">
+  <meta name="copyright" content="Agencia MM 2023">
+  <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/main.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg botonera">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html">
-            <img src="../img/mmlogo1.png" alt="logo agencia de marketing mm">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="Nosotros.html">Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="Servicios.html">Servicios</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="Boxes.html">Boxes</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="Contacto.html">Contacto</a>
-              </li>
-            </ul>
+  <nav class="navbar navbar-expand-lg botonera">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="../index.html">
+        <img src="../img/mmlogo1.png" alt="logo agencia de marketing mm">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="Nosotros.html">Nosotros</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Servicios.html">Servicios</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Boxes.html">Boxes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Contacto.html">Contacto</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <header>
+    <h1>Nosotros</h1>
+  </header>
+  <main>
+    <section>
+      <div id="carouselExampleCaptions" class="carousel slide">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="../img/nosotros/quines somos.png" class="d-block w-100" alt="ilustracion del trabajo que realizamos">
+            <div class="carousel-caption d-none d-md-block">
+              <h2>Nuestra historia</h2>
+              <p> Somos una pequeña empresa argentina especializada en brindar servicios de marketing a otras empresas
+                de todo el mundo. Nacimos en el 2014 en la Ciudad Autónoma de Buenos Aires y comenzamos a trabajar con
+                marcas locales pero hacia el 2020 nos expandimos a otros países.
+              </p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="../img/nosotros/equipo.png" class="d-block w-100" alt="representacion de personas trabajando en equipo">
+            <div class="carousel-caption d-none d-md-block">
+              <h2>Nuestro Equipo</h2>
+              <p>Johanna es nuestra publicista especializada en marketing con más de 15 años trabajando para marcas
+                prestigiosas. Nicolás es nuestro programador con 16 años de experiencia en el sector. Martín es nuestro
+                diseñador y constructor de marcas con más de 12 años de trabajando en el mundo del marketing.</p>
+            </div>
           </div>
         </div>
-      </nav>
-    <header>
-        <img src="../img/headers/nosotros.jpg" alt="ilustracion de marketing">
-    </header>
-    <main>
-        <section>
-            <h1>Nosotros</h1>
-            <p>Somos una pequeña empresa argentina especializada en brindar servicios de marketing a otras empresas de
-                todo el mundo.</p>
-            <p>De la mano de nuestro equipo altamente capacitado, tenemos como objetivo hacer que nuestros clientes
-                tengan experiencias inigualables para lograr que sus negocios se conviertan en lo que siempre desearon.
-            </p>
-        </section>
-    </main>
-    <footer>
-        <a href="https://instagram.com" target="_blank">
-            <img src="../img/iconos/instagram.png" alt="seguinos en instagram">
-        </a>
-        <a href="https://facebook.com" target="blank">
-            <img src="../img/iconos/facebook.jpg" alt="seguinos en facebook">
-        </a>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    </section>
+  </main>
+  <footer class="pie-pagina">
+    <div class="red-social">
+      <h2>Siguenos</h2>
+      <div class="logo-rrss">
+      <a href="https://instagram.com" target="_blank">
+        <img src="../img/iconos/instagram.png" alt="seguinos en instagram">
+      </a>
+      <a href="https://facebook.com" target="blank">
+        <img src="../img/iconos/facebook.png" alt="seguinos en facebook">
+      </a>
+    </div>
+    </div>
+    <div class="derechos">
+      <small>&copy; 2022 <b>Agencia MM</b> - Todos los Derechos Reservados</small>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
