--- a/pages/Servicios.html
+++ b/pages/Servicios.html
@@ -6,10 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Agencia de Marketing MM Servicios</title>
+  <meta name="descripcion" content="Trabajamos con vos desde donde estes">
+  <meta name="autor" content="Urti Facundo">
+  <meta name="keywords" content="Marketing, Agencia de Marketing, Publicidad">
+  <meta name="copyright" content="Agencia MM 2023">
   <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/main.css">
 </head>
 
 <body>
@@ -42,13 +46,12 @@
   </nav>
 
     <header>
-      <img src="../img/headers/servicios.jpg" alt="ilustracion de marketing">
+      <h1>Servicios</h1>
     </header>
     <main>
 
-      <div class="container fluid py-2">
-        <h1>Servicios</h1>
-        <div class="row">
+      <div class="contendedor">
+       <div class="row">
           <article class="col-sm-12 col-md-6 col-lg-3">
             <div class="card">
               <img src="../img/servicios/Branding.jpg" class="card-img-top" alt="representacion de estrategia de marca">
@@ -57,10 +60,9 @@
                 <p class="card-text">Trabajaremos sobre la marca de tu negocio (re)construyéndola desde el principio.
                   Investigaremos el
                   segmento del mercado en el que te posicionas e identificaremos tu target de forma detallada.
-                  Profundizaremos en la misión, visión y los valores de tu negocio para generar un diferencial que
-                  destaque tu marca por sobre la competencia.</p>
+                  </p>
                 <main class="text-end">
-                  <a href="Contacto.html" class="btn btn-primary">Contratar</a>
+                  <a href="Contacto.html" class="btn btn-secondary">Contratar</a>
                 </main>
               </div>
             </div>
@@ -79,7 +81,7 @@
                   que
                   necesites.</p>
                 <main class="text-end">
-                  <a href="Contacto.html" class="btn btn-primary">Contratar</a>
+                  <a href="Contacto.html" class="btn btn-secondary">Contratar</a>
                 </main>
               </div>
             </div>
@@ -95,7 +97,7 @@
                   de contenido exclusivo adecuándonos al calendario de publicaciones. Monitorearemos las estadísticas y
                   aplicaremos herramientas de social listening.</p>
                 <main class="text-end">
-                  <a href="Contacto.html" class="btn btn-primary">Contratar</a>
+                  <a href="Contacto.html" class="btn btn-secondary">Contratar</a>
                 </main>
               </div>
             </div>
@@ -109,9 +111,9 @@
                 <p class="card-text">Crearemos la página web de tu negocio con diseño exclusivo y personalizado,
                   siguiendo
                   los lineamientos de
-                  tu marca y según las funcionalidades que necesites</p>
+                  tu marca y según las funcionalidades que necesites para que el usuario tenga la mejor experincia.</p>
                 <main class="text-end">
-                  <a href="Contacto.html" class="btn btn-primary">Contratar</a>
+                  <a href="Contacto.html" class="btn btn-secondary">Contratar</a>
                 </main>
               </div>
             </div>
@@ -121,13 +123,21 @@
       </div>
 
     </main>
-    <footer>
-      <a href="https://instagram.com" target="_blank">
-        <img src="../img/iconos/instagram.png" alt="seguinos en instagram">
-      </a>
-      <a href="https://facebook.com" target="blank">
-        <img src="../img/iconos/facebook.jpg" alt="seguinos en facebook">
-      </a>
+    <footer class="pie-pagina">
+      <div class="red-social">
+        <h2>Siguenos</h2>
+        <div class="logo-rrss">
+        <a href="https://instagram.com" target="_blank">
+          <img src="../img/iconos/instagram.png" alt="seguinos en instagram">
+        </a>
+        <a href="https://facebook.com" target="blank">
+          <img src="../img/iconos/facebook.png" alt="seguinos en facebook">
+        </a>
+      </div>
+      </div>
+      <div class="derechos">
+        <small>&copy; 2022 <b>Agencia MM</b> - Todos los Derechos Reservados</small>
+      </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
